css/styles.css
body {
  font-size: 1.125em;
  margin: 0;
  font-family: 'Open Sans', sans-serif;
}

td {
  vertical-align: top;
}

/* Standard Buttons Layout */
.btn {
  border-radius: 50px;
  padding: 10px 50px;
  border: 1px solid transparent;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
}

.attribution {
  font-size: 11px;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

/* HEADER SECTION */
/* container-header */
.container-header {
  background-image: url(../images/bg-hero-desktop.svg);
  width: auto;
  height: 100%;
  background-size: cover;
  padding: 50px;
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
  color: hsl(192, 100%, 9%);
  background-color: hsl(193, 100%, 96%);
}

.cta-button {
  background-color: hsl(322, 100%, 66%);
  color: #FFF;
  margin-top: 20px;
}

.cta-button:hover {
  color: hsl(322, 100%, 66%);
  background-color: #FFF;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
}

.menu-header-container {
  display: flex;
  width: 100%;
  justify-content: space-between;
  margin-bottom: 50px;
}

.header-button {
  color: hsl(192, 100%, 9%);
  background-color: #FFF;
}

.header-button:hover {
  color: #FFF;
  background: hsl(322, 100%, 66%);
}

.flex-wrapper {
  display: flex;
  flex-direction: row;
}

.hero-description {
  width: 50%;
  margin-right: 100px;
}

.hero-img {
  width: 100%;
}

.sub-title {
  font-size: 0.95rem;
}

.title {
  font-size: 2.5rem;
}

/* FEATURES SECTION */
.feature-description {
  width: 50%;
  color: hsl(192, 100%, 9%);
  font-family: 'Open Sans', sans-serif;
  margin-right: 100px;
}

.feature-title {
  font-size: 1.5rem;
  font-weight: 700;
}

.feature-sub-title {
  font-size: 0.95rem;
  color: hsl(208, 11%, 55%);
}

.feature-img {
  width: 100%;
  font-weight: 400;
}

.feature-img-container {
  display: flex;
  justify-content: center;
  width: 50%;
}

.second-feature .feature-description {
  margin-right: 0;
  margin-left: 100px;
}

.flex-wrapper.second-feature {
  flex-direction: row-reverse;
}

.feature-wrapper .flex-wrapper {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  margin: 20px 0;
  border-radius: 20px;
  padding: 0 15px;
  align-items: center;
  padding: 50px;
}

.feature-wrapper {
  margin: 70px 50px 20px 50px;
}

/* CTA SECTION */
.cta-wrapper {
  width: 60%;
  margin: 100px auto 0 auto;
  text-align: center;
  align-items: center;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  border-radius: 20px;
  padding: 35px 0 40px 0;
  color: hsl(192, 100%, 9%);
  position: relative;
  top: 100px;
  background-color: #FFF;
}

.cta-title {
  font-size: 2.5rem;
  margin: 0;
}

/* FOOTER SECTION */
.footer-wrapper {
  background-color: hsl(192, 100%, 9%);
  padding: 200px 50px 50px 50px;
  color: #FFF;
}

.footer-icon {
  height: 100%;
  width: auto;
}

.footer-wrapper p {
  margin: 0
}

.footer-flex-container {
  display: flex;
  flex-direction: row;
  gap: 10%;
}

.company-info {
  display: flex;
  flex-direction: column;
  max-width: 30%;
}

.logo {
  margin: 25px 0;
}

.links {
  color: #FFF;
  text-decoration: none;
  opacity: 0.8;
}

.links:hover {
  opacity: 1;
}

.company-socials {
  display: flex;
  flex-direction: row;
  gap: 20px;
}

.social-icon {
  color: #FFF;
  max-height: 20px;
}

.social-icon:hover {
  color: hsl(322, 100%, 66%);
}

.copyright {
  text-align: right;
}


@media screen and (max-width: 470px) {
  .header-logo {
    max-width: 150px;
  }
}
@media screen and (max-width:900px) {

  .container-header {
    padding: 5%;
  }

  .cta-title {
    font-size: 1.5rem;
  }

  .header-button {
    padding: 2% 5%;
  }



  .flex-wrapper {
    flex-direction: column;
  }

  .hero-description {
    width: auto;
    text-align: center;
    justify-content: center;
    align-items: center;
    margin:  35px auto ;
  }

  .feature-wrapper {margin: auto 5%;}

  .first-feature.flex-wrapper , .second-feature.flex-wrapper ,.third-feature.flex-wrapper {
    flex-direction: column-reverse;
    text-align: center;
    margin: 35px auto;
    align-items: normal;
    
  }

  .feature-description {
    width: 100%!important;
    margin: 0!important;
  }


  .cta-wrapper {
    width: auto;
    margin: auto 5%;
  }

  .footer-wrapper {
    padding-left: 5%;
    padding-right: 5%;
    text-align: center;
    align-items: center;
  }

  .footer-flex-container {
    flex-direction: column;
    align-items: center;
  }

  .links {
    margin-top: 20px
  }

  .company-info {
    max-width: 100%;
  }

  .company-socials {
    width: 100%;
    justify-content: center;
    margin: 25px auto;
  }

  .copyright {
    text-align: center;
  }

  .feature-img-container{
    width: 100%;
  }


}

